Sonar code fixes